# lotyr

./: .gitmodules  CMakeLists.txt  README.md  lotyr.cpp  lotyr.h
.github/workflows/: CICD.yml  linux.yml  macos.yml  windows.yml
